unpackaged/main/default/objects/ffct__RecordMigration__c/fields/ffct__ChangedById__c.field-meta.xml
<CustomField>
    <fullName>ffct__ChangedById__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Changed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>RecordMigration</relationshipName>
    <type>Lookup</type>
</CustomField>