unpackaged/main/default/objects/ffct__RecordMigration__c/fields/ffct__Id__c.field-meta.xml
<CustomField>
    <fullName>ffct__Id__c</fullName>
    <description>Holds the Id of the record to be migrated</description>
    <label>Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>