unpackaged/main/default/objects/ffct__RecordMigration__c/fields/ffct__IsUpdate__c.field-meta.xml
<CustomField>
    <fullName>ffct__IsUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Update</label>
    <type>Checkbox</type>
</CustomField>