unpackaged/main/default/objects/ffct__RecordMigration__c/fields/ffct__MigrationSet__c.field-meta.xml
<CustomField>
    <fullName>ffct__MigrationSet__c</fullName>
    <description>Holds the associated Migration Set</description>
    <label>Migration Set</label>
    <referenceTo>ffct__MigrationSet__c</referenceTo>
    <relationshipLabel>Record Migration</relationshipLabel>
    <relationshipName>RecordMigration</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>