unpackaged/main/default/objects/ffct__RecordMigration__c/fields/ffct__Object__c.field-meta.xml
<CustomField>
    <fullName>ffct__Object__c</fullName>
    <description>Holds the API name of the object whose records needs to be migrated</description>
    <label>Object</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>